# AoiPlate

./: .envrc  .mise.toml  Cargo.toml  README.md
assets/icons/: AoiPlate.icns
scripts/: build_release_assets_macos.sh  generate_app_icon_macos.sh
src/: app.rs  config.rs  hotkey.rs  logging.rs  main.rs  panel.rs  permissions.rs  storage.rs  tray.rs
ui/: app.js  index.html  styles.css
